[project]
name = "jetlend1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=4.2,<5.0)",
    "djangorestframework (>=3.15,<4.0)",
    "gunicorn (>=23.0,<24.0)",
    "python-decouple (>=3.8,<4.0)",
    "dj-database-url (>=2.3,<3.0)",
    "django-cors-headers (>=4.6,<5.0)",
    "whitenoise (>=6.8,<7.0)",
    "psycopg2-binary (>=2.9,<3.0)",
    "tzdata (>=2026.2,<2027.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-django = "^4.9"
pytest-cov = "^5.0"
factory-boy = "^3.3"
ruff = "^0.6"
mypy = "^1.11"
django-stubs = "^5.1"
djangorestframework-stubs = "^3.15"
django-extensions = "^3.2"
ipython = "^8.26"
